--- a/content/blog/2013/fourth-post.adoc
+++ b/content/blog/2013/fourth-post.adoc
@@ -4,6 +4,8 @@ Jonathan Bullock
 :jbake-type: post
 :jbake-status: published
 :jbake-tags: blog, asciidoc
+:jbake-shareimage: img/clean-blog-share-card.png
+:jbake-coverimage: img/grand-canyon.jpg
 :idprefix:
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel diam purus. Curabitur ut nisi lacus.
