font size 20px->18px; Lato Light for index,tag and archive page

--- a/README.adoc
+++ b/README.adoc
@@ -11,7 +11,7 @@ Siddhesh Rane
 :idprefix:
 :icons: font
 
-A port of Clean Blog by Start Bootstrap for JBake.
+A port of https://startbootstrap.com/template-overviews/clean-blog[Clean Blog by Start Bootstrap] for JBake.
 
 == Features
 
